Working on Game Phase
I trying to not "overfit" my data of what an opening/ middle/ endgame is. Using stockfish's settings did not work, and it needs some adjustment.

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -86,9 +86,9 @@
     "    if any(x is None for x in [time_remaining,initial_time, time_spent]):\n",
     "        return None\n",
     "\n",
-    "    absolute_pressure = time_remaining < 30,\n",
-    "    relative_pressure = (time_remaining / initial_time) < 0.1 if initial_time else False,\n",
-    "    ratio_pressure = (time_spent / time_remaining > 0.3) if time_remaining else False,\n",
+    "    absolute_pressure = time_remaining < 30\n",
+    "    relative_pressure = (time_remaining / initial_time) < 0.1 if initial_time else False\n",
+    "    ratio_pressure = (time_spent / time_remaining > 0.3) if time_remaining else False\n",
     "\n",
     "    return absolute_pressure or relative_pressure or ratio_pressure\n",
     "\n",
@@ -163,14 +163,6 @@
     "        material[\"White\"] += len(board.pieces(piece_type, chess.WHITE)) * value\n",
     "        material[\"Black\"] += len(board.pieces(piece_type, chess.BLACK)) * value\n",
     "    return material\n",
-    "\n",
-    "def categorize_game_phase(move_number):\n",
-    "    if move_number <= 15:\n",
-    "        return \"Opening\"\n",
-    "    elif move_number <= 30:\n",
-    "        return \"Middlegame\"\n",
-    "    else:\n",
-    "        return \"Endgame\"\n",
     "\n",
     "def categorize_position_complexity(evaluation):\n",
     "    if evaluation is None:\n",
@@ -319,29 +311,19 @@
     "        material[\"Black\"] += len(board.pieces(piece_type, chess.BLACK)) * value\n",
     "    return material\n",
     "\n",
-    "\n",
-    "def categorize_game_phase(move_number):\n",
-    "    if move_number <= 15:\n",
+    "def categorize_game_phase(board):\n",
+    "    material = calculate_material(board)\n",
+    "    white_pawns = len(board.pieces(chess.PAWN, chess.WHITE))\n",
+    "    black_pawns = len(board.pieces(chess.PAWN, chess.BLACK))\n",
+    "    non_pawn_material = material[\"White\"] + material[\"Black\"] - white_pawns - black_pawns\n",
+    "    \n",
+    "    # Much more aggressive thresholds based on actual game data\n",
+    "    if non_pawn_material > 52:    # Only the very earliest moves\n",
     "        return \"Opening\"\n",
-    "    elif move_number <= 30:\n",
+    "    elif non_pawn_material > 35:  # Most of the middle game\n",
     "        return \"Middlegame\"\n",
-    "    else:\n",
+    "    else:                         # When significant material is gone\n",
     "        return \"Endgame\"\n",
-    "\n",
-    "\n",
-    "def categorize_position_complexity(evaluation):\n",
-    "    if evaluation is None:\n",
-    "        return 'Unknown'\n",
-    "    if isinstance(evaluation, str) and '#' in evaluation:\n",
-    "        # Mate positions are considered complex\n",
-    "        return 'Complex'\n",
-    "    elif abs(evaluation) < 1:\n",
-    "        return 'Balanced'\n",
-    "    elif abs(evaluation) < 3:\n",
-    "        return 'Slight Advantage'\n",
-    "    else:\n",
-    "        return 'Decisive Advantage'\n",
-    "\n",
     "\n",
     "def categorize_move(eval_before, eval_after):\n",
     "    if eval_before is None or eval_after is None:\n",
@@ -686,7 +668,7 @@
     "                is_sacrifice = material_diff < 0\n",
     "\n",
     "                # Categorize game phase\n",
-    "                game_phase = categorize_game_phase(move_number)\n",
+    "                game_phase = categorize_game_phase(board)\n",
     "\n",
     "                # Categorize position complexity based on previous evaluation\n",
     "                position_complexity = categorize_position_complexity(prev_evaluation)\n",
@@ -780,7 +762,7 @@
       "INFO: Fetching games for user 'Tobermorey'...\n",
       "INFO: Fetched 1 games with evaluations for user 'Tobermorey'.\n",
       "INFO: Fetching games for user 'apostatlet'...\n",
-      "INFO: Fetched 1 games with evaluations for user 'apostatlet'.\n",
+      "INFO: Fetched 4 games with evaluations for user 'apostatlet'.\n",
       "INFO: Fetching games for user 'LovePump1000'...\n",
       "INFO: Fetched 3 games with evaluations for user 'LovePump1000'.\n",
       "INFO: Fetching games for user 'Stuntmanandy'...\n",
@@ -788,7 +770,7 @@
       "INFO: Fetching games for user 'Banfy_B'...\n",
       "WARNING: Failed to fetch games for user 'Banfy_B'. Status code: 404\n",
       "INFO: Fetching games for user 'ChessyChesterton12'...\n",
-      "INFO: Fetched 8 games with evaluations for user 'ChessyChesterton12'.\n",
+      "INFO: Fetched 4 games with evaluations for user 'ChessyChesterton12'.\n",
       "INFO: Fetching games for user 'Yastoon'...\n",
       "INFO: Fetched 7 games with evaluations for user 'Yastoon'.\n",
       "INFO: Fetching games for user 'Timy1976'...\n",
@@ -805,13 +787,45 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing ADHD games: 100%|██████████| 38/38 [00:00<00:00, 698.48it/s]"
+      "Processing ADHD games:   0%|          | 0/37 [00:00<?, ?it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Error processing game https://lichess.org/0AlVNjiV: bad operand type for abs(): 'str'\n",
+      "Error processing game https://lichess.org/z494IECI: bad operand type for abs(): 'str'\n",
+      "Error processing game https://lichess.org/KXRlS3tV: bad operand type for abs(): 'str'\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Processing ADHD games: 100%|██████████| 37/37 [00:00<00:00, 633.97it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error processing game https://lichess.org/39bWsckH: bad operand type for abs(): 'str'\n",
+      "Error processing game https://lichess.org/0ax9uMsm: bad operand type for abs(): 'str'\n",
+      "Error processing game https://lichess.org/VwmOoubi: bad operand type for abs(): 'str'\n",
+      "Error processing game https://lichess.org/7tT7Kal4: bad operand type for abs(): 'str'\n",
+      "Error processing game https://lichess.org/qA0wJR6J: bad operand type for abs(): 'str'\n",
+      "Error processing game https://lichess.org/Vj1Ems3q: bad operand type for abs(): 'str'\n",
+      "Error processing game https://lichess.org/pQVfUzYm: bad operand type for abs(): 'str'\n",
+      "Error processing game https://lichess.org/UBYYRihY: bad operand type for abs(): 'str'\n",
+      "Error processing game https://lichess.org/Lkco1BAi: bad operand type for abs(): 'str'\n",
+      "Error processing game https://lichess.org/J3521Vp4: bad operand type for abs(): 'str'\n",
+      "Error processing game https://lichess.org/5cVG9sNF: bad operand type for abs(): 'str'\n",
+      "Error processing game https://lichess.org/rPoTKcgw: bad operand type for abs(): 'str'\n",
+      "Error processing game https://lichess.org/AZRfLdEl: bad operand type for abs(): 'str'\n",
+      "Error processing game https://lichess.org/aniI658Z: bad operand type for abs(): 'str'\n",
+      "Error processing game https://lichess.org/69eTXXLr: bad operand type for abs(): 'str'\n",
+      "Error processing game https://lichess.org/bfU4PiBU: bad operand type for abs(): 'str'\n",
       "INFO: Debugging ADHD GAMES PROCESSING\n",
       "INFO: Fetching general population games...\n"
      ]
@@ -835,18 +849,29 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing General games: 100%|██████████| 20/20 [00:00<00:00, 754.35it/s]"
+      "Processing General games: 100%|██████████| 20/20 [00:00<00:00, 660.68it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Error processing game https://lichess.org/avftQQN9: bad operand type for abs(): 'str'\n",
+      "Error processing game https://lichess.org/kbkdiaqQ: bad operand type for abs(): 'str'\n",
+      "Error processing game https://lichess.org/Qwv4PuNW: bad operand type for abs(): 'str'\n",
+      "Error processing game https://lichess.org/5ZUG3wEi: bad operand type for abs(): 'str'\n",
+      "Error processing game https://lichess.org/cTWk9HtT: bad operand type for abs(): 'str'\n",
+      "Error processing game https://lichess.org/pqReQ5bC: bad operand type for abs(): 'str'\n",
+      "Error processing game https://lichess.org/8ehOfQcd: bad operand type for abs(): 'str'\n",
+      "Error processing game https://lichess.org/UkK5Cnvk: bad operand type for abs(): 'str'\n",
+      "Error processing game https://lichess.org/VBrgpFg6: bad operand type for abs(): 'str'\n",
+      "Error processing game https://lichess.org/7AJBrvfj: bad operand type for abs(): 'str'\n",
+      "Error processing game https://lichess.org/iHSoD66k: bad operand type for abs(): 'str'\n",
       "INFO: Debugging GENERAL GAMES PROCESSING\n",
       "INFO: Combining datasets...\n",
       "INFO: Debugging COMBINED DATASET\n",
       "INFO: Cleaning data...\n",
-      "INFO: Total number of moves after cleaning: 1886\n"
+      "INFO: Total number of moves after cleaning: 1774\n"
      ]
     },
     {
@@ -936,46 +961,11 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "performance analysis under time pressure:\n",
-      "--------------------------------------------------\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'groups' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[6], line 12\u001b[0m\n\u001b[1;32m      9\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mperformance analysis under time pressure:\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     10\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m-\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;241m*\u001b[39m\u001b[38;5;241m50\u001b[39m)\n\u001b[0;32m---> 12\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m group \u001b[38;5;129;01min\u001b[39;00m \u001b[43mgroups\u001b[49m:\n\u001b[1;32m     13\u001b[0m     group_data \u001b[38;5;241m=\u001b[39m df[df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGroup\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m==\u001b[39m group]\n\u001b[1;32m     15\u001b[0m     normal \u001b[38;5;241m=\u001b[39m group_data[group_data[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mUnderTimePressure\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m]\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'groups' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Statistical Analysis\n",
     "\"\"\"\n",
-    "\n",
-    "def analyze_adhd_time_pressure(df):\n",
-    "    groups = ['ADHD', 'General']\n",
-    "    conditions = [True, False]\n",
-    "\n",
-    "print(\"performance analysis under time pressure:\")\n",
-    "print(\"-\"*50)\n",
-    "\n",
-    "for group in groups:\n",
-    "    group_data = df[df['Group']== group]\n",
-    "\n",
-    "    normal = group_data[group_data['UnderTimePressure'] == False]\n",
-    "    pressure = group_data[group_data['UnderTimePresure'] == True]\n",
-    "\n",
-    "\n",
     "def analyze_adhd_performance(df):\n",
     "    \"\"\"\n",
     "    Analyze performance differences between ADHD and control moves\n",
@@ -1064,9 +1054,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (725997318.py, line 85)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[7], line 85\u001b[0;36m\u001b[0m\n\u001b[0;31m    logging.info(\"\\n----------------------- Statistical Test Results -----------------------\\n\")\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
    "source": [
     "#%%\n",
     "import matplotlib.pyplot as plt\n",
