--- a/Main.ipynb
+++ b/Main.ipynb
@@ -165,39 +165,54 @@
     "    return material\n",
     "\n",
     "def categorize_position_complexity(evaluation):\n",
+    "    \"\"\"\n",
+    "    Categorize position complexity, handling both numeric and mate evaluations\n",
+    "    \"\"\"\n",
     "    if evaluation is None:\n",
     "        return 'Unknown'\n",
-    "    elif abs(evaluation) < 1:\n",
-    "        return 'Balanced'\n",
-    "    elif abs(evaluation) < 3:\n",
-    "        return 'Slight Advantage'\n",
-    "    else:\n",
-    "        return 'Decisive Advantage'\n",
+    "    \n",
+    "    # Handle mate scores\n",
+    "    if isinstance(evaluation, str) and '#' in evaluation:\n",
+    "        return 'Decisive Advantage'  # Mate is always decisive\n",
+    "        \n",
+    "    try:\n",
+    "        eval_float = float(evaluation)\n",
+    "        if abs(eval_float) < 1:\n",
+    "            return 'Balanced'\n",
+    "        elif abs(eval_float) < 3:\n",
+    "            return 'Slight Advantage'\n",
+    "        else:\n",
+    "            return 'Decisive Advantage'\n",
+    "    except (ValueError, TypeError):\n",
+    "        return 'Unknown'\n",
     "\n",
     "def categorize_move(eval_before, eval_after):\n",
+    "    \"\"\"\n",
+    "    Categorize move quality, handling both numeric and mate evaluations\n",
+    "    \"\"\"\n",
     "    if eval_before is None or eval_after is None:\n",
     "        return \"Unknown\"\n",
     "\n",
-    "    # Define saturation limits in centipawns\n",
-    "    SATURATION_LIMIT = 1000  # Equivalent to a 10-pawn advantage\n",
-    "    MATE_SCORE = 10000       # Arbitrary large value representing mate\n",
+    "    # Handle mate scores\n",
+    "    if isinstance(eval_after, str) and '#' in eval_after:\n",
+    "        if '-' in eval_after:\n",
+    "            return \"Forced Checkmate (Losing)\"\n",
+    "        return \"Forced Checkmate (Winning)\"\n",
+    "    \n",
+    "    try:\n",
+    "        eval_before = float(eval_before)\n",
+    "        eval_after = float(eval_after)\n",
+    "    except (ValueError, TypeError):\n",
+    "        return \"Unknown\"\n",
     "\n",
+    "    # Now proceed with numeric evaluation\n",
+    "    SATURATION_LIMIT = 1000  # Equivalent to a 10-pawn advantage\n",
+    "    \n",
     "    # Calculate evaluation change\n",
     "    eval_change = eval_after - eval_before\n",
     "\n",
-    "    # Handle mate scores (assuming the engine uses large numbers to indicate mate)\n",
-    "    if abs(eval_after) >= MATE_SCORE:\n",
-    "        if eval_after > 0:\n",
-    "            return \"Forced Checkmate (Winning)\"\n",
-    "        else:\n",
-    "            return \"Forced Checkmate (Losing)\"\n",
-    "\n",
-    "    # Handle evaluation saturation\n",
     "    if abs(eval_after) >= SATURATION_LIMIT:\n",
-    "        if eval_after > 0:\n",
-    "            return \"Winning Position\"\n",
-    "        else:\n",
-    "            return \"Losing Position\"\n",
+    "        return \"Winning Position\" if eval_after > 0 else \"Losing Position\"\n",
     "\n",
     "    # Categorize the move based on evaluation change\n",
     "    if eval_change <= -300:\n",
@@ -312,17 +327,29 @@
     "    return material\n",
     "\n",
     "def categorize_game_phase(board):\n",
+    "    \"\"\"\n",
+    "    Determines game phase using Stockfish's approach of interpolating between\n",
+    "    midgame and endgame based on remaining non-pawn material\n",
+    "    \"\"\"\n",
+    "    MIDGAME_LIMIT = 32    # Full complement of pieces (minus pawns and kings)\n",
+    "    ENDGAME_LIMIT = 12    # Roughly a rook + bishop/knight per side\n",
+    "    PHASE_SCALE = 256     # Scaling factor\n",
+    "    \n",
     "    material = calculate_material(board)\n",
     "    white_pawns = len(board.pieces(chess.PAWN, chess.WHITE))\n",
     "    black_pawns = len(board.pieces(chess.PAWN, chess.BLACK))\n",
     "    non_pawn_material = material[\"White\"] + material[\"Black\"] - white_pawns - black_pawns\n",
     "    \n",
-    "    # Much more aggressive thresholds based on actual game data\n",
-    "    if non_pawn_material > 52:    # Only the very earliest moves\n",
+    "    # Calculate phase score\n",
+    "    phase = (non_pawn_material - ENDGAME_LIMIT) * PHASE_SCALE // (MIDGAME_LIMIT - ENDGAME_LIMIT)\n",
+    "    phase = max(0, min(phase, PHASE_SCALE))  # Clamp between 0 and 256\n",
+    "    \n",
+    "    # Map to game phases with better thresholds\n",
+    "    if phase > 192:       # More than 75% material\n",
     "        return \"Opening\"\n",
-    "    elif non_pawn_material > 35:  # Most of the middle game\n",
+    "    elif phase > 64:      # More than 25% material\n",
     "        return \"Middlegame\"\n",
-    "    else:                         # When significant material is gone\n",
+    "    else:                 # Less than 25% material\n",
     "        return \"Endgame\"\n",
     "\n",
     "def categorize_move(eval_before, eval_after):\n",
@@ -787,45 +814,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing ADHD games:   0%|          | 0/37 [00:00<?, ?it/s]"
+      "Processing ADHD games: 100%|██████████| 37/37 [00:00<00:00, 567.61it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error processing game https://lichess.org/0AlVNjiV: bad operand type for abs(): 'str'\n",
-      "Error processing game https://lichess.org/z494IECI: bad operand type for abs(): 'str'\n",
-      "Error processing game https://lichess.org/KXRlS3tV: bad operand type for abs(): 'str'\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Processing ADHD games: 100%|██████████| 37/37 [00:00<00:00, 633.97it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Error processing game https://lichess.org/39bWsckH: bad operand type for abs(): 'str'\n",
-      "Error processing game https://lichess.org/0ax9uMsm: bad operand type for abs(): 'str'\n",
-      "Error processing game https://lichess.org/VwmOoubi: bad operand type for abs(): 'str'\n",
-      "Error processing game https://lichess.org/7tT7Kal4: bad operand type for abs(): 'str'\n",
-      "Error processing game https://lichess.org/qA0wJR6J: bad operand type for abs(): 'str'\n",
-      "Error processing game https://lichess.org/Vj1Ems3q: bad operand type for abs(): 'str'\n",
-      "Error processing game https://lichess.org/pQVfUzYm: bad operand type for abs(): 'str'\n",
-      "Error processing game https://lichess.org/UBYYRihY: bad operand type for abs(): 'str'\n",
-      "Error processing game https://lichess.org/Lkco1BAi: bad operand type for abs(): 'str'\n",
-      "Error processing game https://lichess.org/J3521Vp4: bad operand type for abs(): 'str'\n",
-      "Error processing game https://lichess.org/5cVG9sNF: bad operand type for abs(): 'str'\n",
-      "Error processing game https://lichess.org/rPoTKcgw: bad operand type for abs(): 'str'\n",
-      "Error processing game https://lichess.org/AZRfLdEl: bad operand type for abs(): 'str'\n",
-      "Error processing game https://lichess.org/aniI658Z: bad operand type for abs(): 'str'\n",
-      "Error processing game https://lichess.org/69eTXXLr: bad operand type for abs(): 'str'\n",
-      "Error processing game https://lichess.org/bfU4PiBU: bad operand type for abs(): 'str'\n",
       "INFO: Debugging ADHD GAMES PROCESSING\n",
       "INFO: Fetching general population games...\n"
      ]
@@ -849,29 +844,18 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Processing General games: 100%|██████████| 20/20 [00:00<00:00, 660.68it/s]"
+      "Processing General games: 100%|██████████| 20/20 [00:00<00:00, 596.59it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Error processing game https://lichess.org/avftQQN9: bad operand type for abs(): 'str'\n",
-      "Error processing game https://lichess.org/kbkdiaqQ: bad operand type for abs(): 'str'\n",
-      "Error processing game https://lichess.org/Qwv4PuNW: bad operand type for abs(): 'str'\n",
-      "Error processing game https://lichess.org/5ZUG3wEi: bad operand type for abs(): 'str'\n",
-      "Error processing game https://lichess.org/cTWk9HtT: bad operand type for abs(): 'str'\n",
-      "Error processing game https://lichess.org/pqReQ5bC: bad operand type for abs(): 'str'\n",
-      "Error processing game https://lichess.org/8ehOfQcd: bad operand type for abs(): 'str'\n",
-      "Error processing game https://lichess.org/UkK5Cnvk: bad operand type for abs(): 'str'\n",
-      "Error processing game https://lichess.org/VBrgpFg6: bad operand type for abs(): 'str'\n",
-      "Error processing game https://lichess.org/7AJBrvfj: bad operand type for abs(): 'str'\n",
-      "Error processing game https://lichess.org/iHSoD66k: bad operand type for abs(): 'str'\n",
       "INFO: Debugging GENERAL GAMES PROCESSING\n",
       "INFO: Combining datasets...\n",
       "INFO: Debugging COMBINED DATASET\n",
       "INFO: Cleaning data...\n",
-      "INFO: Total number of moves after cleaning: 1774\n"
+      "INFO: Total number of moves after cleaning: 1817\n"
      ]
     },
     {
