better FEN sanitization and elimination of variants

--- a/Main.ipynb
+++ b/Main.ipynb
@@ -150,14 +150,45 @@
     "        return complexity.item()\n",
     "    \n",
     "def sanitize_fen(fen):\n",
-    "    # Remove any [] brackets and their contents that might appear in variant chess\n",
-    "    fen = re.sub(r'\\[.*?\\]', '', fen)\n",
-    "    \n",
-    "    # Extract just the position part (first part before any spaces)\n",
-    "    position_part = fen.split()[0] if ' ' in fen else fen\n",
-    "    \n",
-    "    # Reconstruct a standard FEN string\n",
-    "    return f\"{position_part} w - - 0 1\""
+    "    \"\"\"\n",
+    "    Sanitize and validate a FEN string for standard chess.\n",
+    "    Returns None if the FEN is invalid or from a variant game.\n",
+    "    \"\"\"\n",
+    "    try:\n",
+    "        # If we see brackets or special characters, it's likely a variant game\n",
+    "        if '[' in fen or ']' in fen or '~' in fen:\n",
+    "            return None\n",
+    "            \n",
+    "        # Remove any non-standard characters\n",
+    "        valid_chars = 'rnbqkpRNBQKP12345678/- '\n",
+    "        cleaned_fen = ''.join(c for c in fen if c in valid_chars)\n",
+    "        \n",
+    "        # Get position part (everything before first space)\n",
+    "        position_part = cleaned_fen.split()[0] if ' ' in cleaned_fen else cleaned_fen\n",
+    "        \n",
+    "        # Validate basic FEN structure\n",
+    "        ranks = position_part.split('/')\n",
+    "        if len(ranks) != 8:\n",
+    "            return None\n",
+    "            \n",
+    "        # Validate each rank\n",
+    "        for rank in ranks:\n",
+    "            spaces = 0\n",
+    "            for char in rank:\n",
+    "                if char.isdigit():\n",
+    "                    spaces += int(char)\n",
+    "                else:\n",
+    "                    spaces += 1\n",
+    "            if spaces != 8:\n",
+    "                return None\n",
+    "                \n",
+    "        # Return standardized FEN string\n",
+    "        return f\"{position_part} w - - 0 1\"\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        logging.error(f\"FEN sanitization failed: {fen}\")\n",
+    "        logging.error(f\"Error: {str(e)}\")\n",
+    "        return None"
    ]
   },
   {
@@ -687,14 +718,34 @@
     "\n",
     "def process_games(games, group_label, engine):\n",
     "    all_moves = []\n",
+    "    total_games = len(games)\n",
+    "    rated_games = 0\n",
+    "    standard_games = 0\n",
+    "    eval_games = 0\n",
+    "    \n",
+    "    logging.info(f\"\\nProcessing {total_games} games for {group_label} group\")\n",
     "    \n",
     "    for game in tqdm(games, desc=f\"Processing {group_label} games\"):\n",
     "        try:\n",
-    "            # Initialize board and extract game metadata\n",
+    "            # 1. Filter for standard chess and rated games\n",
+    "            variant = game.headers.get(\"Variant\", \"Standard\")\n",
+    "            event = game.headers.get(\"Event\", \"Unknown\")\n",
+    "            \n",
+    "            # Skip non-standard chess games\n",
+    "            if variant.lower() != \"standard\":\n",
+    "                continue\n",
+    "            standard_games += 1\n",
+    "            \n",
+    "            # Check if game is rated (checking both headers and event description)\n",
+    "            rated = (\"rated\" in event.lower() or \n",
+    "                    game.headers.get(\"Rated\", \"False\").lower() == \"true\")\n",
+    "            if not rated:\n",
+    "                continue\n",
+    "            rated_games += 1\n",
+    "            \n",
+    "            # 2. Initialize basic game data\n",
     "            board = game.board()\n",
     "            game_id = game.headers.get(\"Site\", \"Unknown\")\n",
-    "            event = game.headers.get(\"Event\", \"Unknown\")\n",
-    "            date = game.headers.get(\"UTCDate\", \"Unknown\")\n",
     "            white = game.headers.get(\"White\", \"Unknown\")\n",
     "            black = game.headers.get(\"Black\", \"Unknown\")\n",
     "            result = game.headers.get(\"Result\", \"Unknown\")\n",
@@ -702,14 +753,14 @@
     "            black_elo = safe_int(game.headers.get(\"BlackElo\", None))\n",
     "            time_control = game.headers.get(\"TimeControl\", \"Unknown\")\n",
     "            \n",
-    "            # ADHD player identification\n",
+    "            # 3. ADHD player identification\n",
     "            white_has_adhd = white in ADHD_USERNAMES\n",
     "            black_has_adhd = black in ADHD_USERNAMES\n",
     "            \n",
-    "            # Time control parsing\n",
+    "            # 4. Time control parsing\n",
     "            initial_time, increment, time_category = parse_time_control(time_control)\n",
     "            \n",
-    "            # Game traversal initialization\n",
+    "            # 5. Game traversal initialization\n",
     "            node = game\n",
     "            move_number = 0\n",
     "            prev_evaluation = None\n",
@@ -717,11 +768,12 @@
     "            prev_time_remaining = None\n",
     "            prev_winning_chances = None\n",
     "            \n",
-    "            # Verify game has evaluations\n",
+    "            # 6. Verify game has evaluations\n",
     "            if not any(\"%eval\" in node.variations[0].comment for node in game.mainline()):\n",
     "                continue\n",
+    "            eval_games += 1\n",
     "\n",
-    "            # Process moves\n",
+    "            # 7. Process moves\n",
     "            while node.variations:\n",
     "                next_node = node.variations[0]\n",
     "                move = next_node.move\n",
@@ -729,18 +781,17 @@
     "                move_number += 1\n",
     "                player = \"White\" if board.turn else \"Black\"\n",
     "                \n",
-    "                # Get position complexity before the move\n",
+    "                # Get position evaluation data\n",
     "                try:\n",
     "                    position_complexity = elocator.get_position_complexity(board.fen())\n",
     "                except Exception as e:\n",
-    "                    print(f\"Error calculating complexity for position in game {game_id}: {str(e)}\")\n",
     "                    position_complexity = None\n",
     "                \n",
     "                # ADHD status for current move\n",
     "                is_adhd_move = (player == \"White\" and white_has_adhd) or \\\n",
     "                              (player == \"Black\" and black_has_adhd)\n",
     "                \n",
-    "                # Extract clock and evaluation data\n",
+    "                # Extract move metadata\n",
     "                comment = next_node.comment\n",
     "                time_remaining = parse_clock_time(comment)\n",
     "                evaluation = parse_evaluation(comment)\n",
@@ -749,7 +800,6 @@
     "                time_spent = (prev_time_remaining - time_remaining) if all(x is not None for x in [prev_time_remaining, time_remaining]) else None\n",
     "                time_spent = time_spent if time_spent and time_spent > 0 else None\n",
     "                \n",
-    "                # Time pressure analysis\n",
     "                under_pressure = is_under_time_pressure(\n",
     "                    time_remaining=time_remaining,\n",
     "                    initial_time=initial_time,\n",
@@ -788,28 +838,21 @@
     "                \n",
     "                # Compile move data\n",
     "                move_data = {\n",
-    "                    # Game Metadata\n",
     "                    'game_id': game_id,\n",
     "                    'event': event,\n",
-    "                    'date': date,\n",
+    "                    'date': game.headers.get(\"UTCDate\", \"Unknown\"),\n",
     "                    'result': result,\n",
-    "                    \n",
-    "                    # Player Information\n",
     "                    'white': white,\n",
     "                    'black': black,\n",
     "                    'white_elo': white_elo,\n",
     "                    'black_elo': black_elo,\n",
     "                    'adhd_player': white if white_has_adhd else (black if black_has_adhd else None),\n",
-    "                    \n",
-    "                    # Move Details\n",
     "                    'move_number': move_number,\n",
     "                    'player': player,\n",
     "                    'san': san,\n",
     "                    'fen': board.fen(),\n",
     "                    'game_phase': game_phase,\n",
     "                    'is_adhd_move': is_adhd_move,\n",
-    "                    \n",
-    "                    # Position Analysis\n",
     "                    'position_complexity': position_complexity,\n",
     "                    'position_complexity_category': position_complexity_category,\n",
     "                    'evaluation': evaluation,\n",
@@ -817,12 +860,8 @@
     "                    'error_category': error_category,\n",
     "                    'winning_chances': winning_chances,\n",
     "                    'winning_chances_change': winning_chances_change,\n",
-    "                    \n",
-    "                    # Material Analysis\n",
     "                    'material_diff': material_diff,\n",
     "                    'is_sacrifice': is_sacrifice,\n",
-    "                    \n",
-    "                    # Time Management\n",
     "                    'time_control': time_control,\n",
     "                    'time_control_category': time_category.value if time_category else None,\n",
     "                    'initial_time_seconds': initial_time,\n",
@@ -830,8 +869,6 @@
     "                    'time_remaining': time_remaining,\n",
     "                    'time_spent': time_spent,\n",
     "                    'under_time_pressure': under_pressure,\n",
-    "                    \n",
-    "                    # Group Information\n",
     "                    'group': group_label\n",
     "                }\n",
     "                \n",
@@ -845,20 +882,19 @@
     "                node = next_node\n",
     "                \n",
     "        except Exception as e:\n",
-    "            print(f\"Error processing game {game_id}: {e}\")\n",
+    "            logging.error(f\"Error processing game {game_id}: {e}\")\n",
     "            continue\n",
+    "    \n",
+    "    # Processing summary\n",
+    "    logging.info(f\"\\nProcessing Summary for {group_label}:\")\n",
+    "    logging.info(f\"Total games: {total_games}\")\n",
+    "    logging.info(f\"Standard chess games: {standard_games}\")\n",
+    "    logging.info(f\"Rated games: {rated_games}\")\n",
+    "    logging.info(f\"Games with evaluations: {eval_games}\")\n",
+    "    logging.info(f\"Total moves processed: {len(all_moves)}\")\n",
     "    \n",
     "    # Convert to DataFrame\n",
     "    moves_df = pd.DataFrame(all_moves)\n",
-    "    \n",
-    "    # Ensure numeric columns are properly typed\n",
-    "    numeric_columns = ['white_elo', 'black_elo', 'position_complexity', 'evaluation', \n",
-    "                      'eval_change', 'winning_chances', 'winning_chances_change', \n",
-    "                      'material_diff', 'time_remaining', 'time_spent']\n",
-    "    \n",
-    "    for col in numeric_columns:\n",
-    "        if col in moves_df.columns:\n",
-    "            moves_df[col] = pd.to_numeric(moves_df[col], errors='coerce')\n",
     "    \n",
     "    return moves_df\n",
     "\n",
@@ -879,15 +915,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO: Fetching games for user 'teoeo'...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# ----------------------- 1. Fetch and Process ADHD Players' Games -----------------------\n",
     "\n",
